# qtjack

./: CMakeLists.txt  README.md
include/: MidiMsg  client.h  midievent.h  midimsg.h
src/: client.cpp  driver.cpp  midievent.cpp  parameter.cpp  server.cpp
